--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,110 @@
     margin: 0;
     padding: 0;
 }
+:root{
+    --white-color: white;
+    --primary-color: #0a1128;
+    --light-gray-color:#eeeeee;
+    --gap: 3rem;
+
+}
 html{
-    font-size: 62.85%;
+    font-size: 62.5%;
 }
 body{
-    font-family: 'Open Sans', sans-serif;;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.6rem;
+   
 }
 h1,h2,h3,h3,h4,h5,h6{
-    font-family: 'Montserrat', sans-serif;;
+    font-family: 'Montserrat', sans-serif;
+}
+h1{
+    text-transform: uppercase;
+    font-size: 6rem;
+}
+h2{
+    
+    font-size: 5.5rem;
+}
+h3{
+   
+    font-size: 5rem;
+}
+h4{
+    
+    font-size: 4.5rem;
+}
+h5{
+    
+    font-size: 4rem;
+}
+h6{
+   
+    font-size: 3.5rem;
+}
+a{
+    text-decoration: none;
+}
+
+.main_bg{
+    background-image: url('../img/main_bg.svg');
+    background-position: center center;
+    background-size: cover;
+}
+
+.main-content{
+max-width: 1200px;
+margin: 0 auto;
+}
+.menu{
+    background-color: var(--white-color);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    border-bottom: 1px solid var(--light-gray-color);
+}
+.menu-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.menu h1{
+    font-size: 2.3rem;
+}
+
+.menu ul{
+    list-style: none;
+    display: flex;
+}
+.menu ul li a{
+    display: block;
+    margin: 10px;
+    position: relative;
+}
+.menu h1 a{
+    color: inherit;
+    font-size: 1.8rem;
+    padding: 2rem;
+    color: var(--primary-color);
+    
+}
+
+.menu ul li a::after{
+    content: '';
+    position: absolute;
+    bottom: 0.2rem;
+    left: 0%;
+    height: 0.2rem;
+    width: 0%;
+    background: rgb(209, 94, 117);
+    transition: all 300ms ease-in-out;
+}
+.menu ul li a:hover::after{
+    width: 100%;
+    
 }
